language/evm/move-to-yul/tests/NoGenericCallable.exp
!! Move-To-Yul Diagnostics:
 error: #[callable] or #[create] functions cannot be generic
  ┌─ tests/NoGenericCallable.move:5:2
  │
5 │     fun f<T>(x: u64): u64 { x }
  │     ^^^^^^^^^^^^^^^^^^^^^^^^^^^



/* =======================================
 * Generated by Move-To-Yul compiler v0.0
 * ======================================= */

/// @use-src 2:"tests/NoGenericCallable.move"

object "A2_M" {
    code {
        codecopy(0, dataoffset("A2_M_deployed"), datasize("A2_M_deployed"))
        return(0, datasize("A2_M_deployed"))
    }
    object "A2_M_deployed" {
        code {
            mstore(0, memoryguard(160))

            // Dummy calls to reference callables for Yul optimizer
            let $dummy0 := A2_M_f(sload(100))
            sstore(200, $dummy0)

            function A2_M_f(x) -> $result {
                // return $t0
                /// @src 2:105:106
                $result := x
            }

        }
    }
}
